# rdv-systeme-jeu-super-mario-bros

./: .gitignore  README.md
doc/: rdv-systeme-jeu-super-mario-bros.docx
v01/: CMakeLists.txt  about_dialog.cpp  about_dialog.h  about_dialog.ui  audio.qrc  backgrounditem.cpp  backgrounditem.h  coin.cpp  coin.h  database.cpp  database.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mario.qrc  myscene.cpp  myscene.h  settings.cpp  settings.h  smallmario.cpp  smallmario.h  soundmanager.cpp  soundmanager.h  soundmanager.ui  title.cpp  title.h  view.cpp  view.h  weatherstation.cpp  weatherstation.h
v01/build-cmd/: commands.mak
v01/mysql/: requetes.sql
